css/styles.css
/* ... */
/* title */
/*
.navbar-default .navbar-brand {
    color: #777;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #5E5E5E;
}
*/

/* link */
.navbar-default .navbar-nav > li > a {
    color: #492b09;
    
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #0d4dbb;
    font-weight: 600;
    
	background: rgba(171, 107, 35, .4);
	
	border-top-left-radius: 10px;
	
	

}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus {
    color: #4972b9;
    font-weight: 700;

	background: -webkit-linear-gradient(rgba(255,163,34,0.91) 11.59%, rgba(215,217,106,0.46) 23.51%, rgba(251,251,251,0.91) 50.99%, rgba(215,217,106,0.49) 79.47%, #f1d536 88.08%);
	border-bottom-right-radius: 1%;
	
}

.navbar-default .navbar-nav > .open > a, 
.navbar-default .navbar-nav > .open > a:hover, 
.navbar-default .navbar-nav > .open > a:focus {
    color: #555;
    background-color: #D5D5D5;
}
/* caret */
.navbar-default .navbar-nav > .dropdown > a .caret {
    border-top-color: #6B9233;
    border-bottom-color: #6B9233;
    border-top-width: thick;
}
.navbar-default .navbar-nav > .dropdown > a:hover .caret,
.navbar-default .navbar-nav > .dropdown > a:focus .caret {
    border-top-color: #333;
    border-bottom-color: #333;
}
.navbar-default .navbar-nav > .open > a .caret, 
.navbar-default .navbar-nav > .open > a:hover .caret, 
.navbar-default .navbar-nav > .open > a:focus .caret {
    border-top-color: #555;
    border-bottom-color: #555;
}

/*
	background: url('  http://api.thumbr.it/whitenoise-361x370.png?background=f98149bf&noise=edc31a&density=65&opacity=36');
  font-weight: 600;
  color: #4972b9;
*/


/* mobile version */
.navbar-default .navbar-toggle {
		background: url('  http://api.thumbr.it/whitenoise-361x370.png?background=eeac5a&noise=edc31a&density=65&opacity=36');
	background-repeat: repeat-x;
	background-color: rgba(245, 208, 87, 0.68);

}
#menuText a {
	font-size: 2em;
	font-weight: 700;
	padding-top: 0px;
	padding-bottom: 0px;
}
button.navbar-toggle {
	padding-top: 0px;
	padding-bottom: 0px;
	
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
	background: url('  http://api.thumbr.it/whitenoise-361x370.png?background=f98149bf&noise=edc31a&density=65&opacity=36');
}
/*
.navbar-default .navbar-toggle .icon-bar {
    background-color: #CCC;
}
*/


/*
@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #777;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
        color: #333;
    }
}
*/


/*

.menuButton, .collapsed {
	padding: 0%;
	margin: 0%;
}

#menuText {
	float: left;
	
	
	font-size: 1em;
}

#menuText a{

	color: black;


		padding: 0;
	margin: 0;

}

#menuIcon {
	float: left;
	padding-right: 30%;
}
*/


.welcome-row {
	margin-top: 12px;
	margin-bottom: 20px;
}


#welcome {
	

	margin-left: 5px;
	margin-right: -5px;

	background: url("../img/linedpaper.png") repeat;
	
	border-top-left-radius: 3%;
	border-top-right-radius: 10%;
	border-top-left-radius: 5%;
	border-bottom-right-radius: 15%;

}

#welcome h2, #welcome p {
		color: rgba(80, 49, 25, 1);

}



/* CAROUSEL! */
/* Outer Most */
.carousel .slide {
	}
	
#myCarousel {
	background: -webkit-radial-gradient(rgba(88,32,10,0.33) 27.48%, rgba(248, 242, 48, 0.38) 40.99%, rgba(93,38,17,0.33) 73%);

	padding: 5px;
	
	border-radius: 15px;


	
	}
/* Little circles */
.carousel-indicators {
		margin-top: 0%;
		margin-left: -120px; 

		display: none;
		
	}
	
/* inside of caro */	
.carousel-inner {
	margin-left: auto;
	margin-right: auto;
	
	}
/* photo inside */	
.item img{
	margin-left: auto;
	margin-right: auto;
	
}
/* caption */

.item .carousel-caption {
	width: 80%;
	height: 100%;
	
	margin-top: -60px;
	
	margin-left: -55px;

	
	background: rgba(255, 255, 255, 0);

	
}

/* title */
.item .carousel-caption h3 {
	font-size: 1.5em;		
	margin-left: 50%;
	margin-right: -50px;


	background: rgba(202, 164, 58, 0.95);
	padding: 5px;
	
	-webkit-border-radius: 10px;
}	
/* caption */
.item .carousel-caption p {
	position: relative;

	margin-top: 55%;
	

	text-align: justify;
	
	background: #4972b9;
	padding: 5px;
	
	-webkit-border-radius: 10px;
	
	line-height: 18px;
	
	width: 100%;

}
		
@media (max-width: 770px) {
.item .carousel-caption p {
	position: relative;
	margin-top: 50%;}
}

@media (max-width: 500px) {
.item .carousel-caption p {
	position: relative;
	margin-top: 70%;}
}



/*     <!-- Left and right controls --> */

.carousel-control {
	margin-top: 25%;
	
	height: 20%;
	width: 10%;
	}

.left .carousel-control {	
	
}

.glyphicon {
	margin-bottom: auto;
	margin-top: auto;
	
}

.glyphicon .glyphicon-chevron-left {
	width: 20px;
}


/* Panels */

.panel-therapie {background: rgba(144, 229, 97, 0.3);}
.panel-therapie h4 {color: rgba(51, 89, 31, 1);}

.panel-praxis {background: rgba(255, 173, 140, 0.3);}
.panel-praxis h4 {color: rgba(151, 98, 76, 1);}


.panel-infothek {background: rgba(174, 180, 80, 0.3);}
.panel-infothek h4 {color: rgba(76, 80, 34, 1);}

.panel-ausbildung{background: rgba(151, 100, 165, 0.33);}
.panel-ausbildung h4 {color: rgba(86, 56, 95, 1);}

.panel-fb {background: rgba(72, 135, 244, 0.39);}
.panel-fb {color: rgba(26, 55, 104, 1);}

/* tiny interaction */

.panel-therapie:hover { 
	 -ms-transform: rotate(1deg); /* IE 9 */
    -webkit-transform: rotate(1deg); /* Chrome, Safari, Opera */
    transform: rotate(1deg);
}
.panel-praxis:hover { 
	 -ms-transform: rotate(-1deg); /* IE 9 */
    -webkit-transform: rotate(-1deg); /* Chrome, Safari, Opera */
    transform: rotate(-1deg);
}
.panel-infothek:hover { 
	 -ms-transform: rotate(-1deg); /* IE 9 */
    -webkit-transform: rotate(-1deg); /* Chrome, Safari, Opera */
    transform: rotate(-1deg);
}
/* ... */

